--- a/package.json
+++ b/package.json
@@ -24,15 +24,9 @@
   "pre-commit": [
     "lint"
   ],
-  "peerDependencies": {
-    "stylelint": "^7.2.0",
-    "stylelint-scss": "^1.3.4"
-  },
   "dependencies": {
-    "stylelint": "^7.2.0",
     "stylelint-config-css-modules": "^0.1.0",
-    "stylelint-config-standard": "^16.0.0",
-    "stylelint-scss": "^1.3.4"
+    "stylelint-config-standard": "^16.0.0"
   },
   "devDependencies": {
     "eslint-config-foray1010": "^3.6.0",
