--- a/package.json
+++ b/package.json
@@ -19,11 +19,9 @@
   "scripts": {
     "lint": "eslint .",
     "np": "np",
+    "precommit": "npm run lint",
     "test": "npm run lint"
   },
-  "pre-commit": [
-    "lint"
-  ],
   "dependencies": {
     "stylelint-config-css-modules": "^0.1.0",
     "stylelint-config-standard": "^16.0.0"
@@ -31,7 +29,7 @@
   "devDependencies": {
     "eslint": "^3.17.1",
     "eslint-config-foray1010": "^4.0.0",
-    "np": "^2.9.0",
-    "pre-commit": "^1.1.3"
+    "husky": "^0.14.2",
+    "np": "^2.9.0"
   }
 }
