--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
     "node": ">=8.9"
   },
   "description": "my own stylelint config",
-  "keywords": ["config", "stylelint"],
+  "keywords": [
+    "config",
+    "stylelint"
+  ],
   "private": false,
   "license": "MIT",
   "author": "foray1010",
@@ -15,22 +18,18 @@
   "main": "index.js",
   "scripts": {
     "ignore-sync": "ignore-sync",
-    "lint": "eslint .",
-    "precommit": "lint-staged",
-    "test": "yarn lint"
-  },
-  "lint-staged": {
-    "*.js": ["prettier-eslint --write", "eslint --fix", "git add"],
-    "*.json": ["prettier-eslint --write", "git add"]
+    "lint": "eslint ."
   },
   "dependencies": {
     "stylelint-config-css-modules": "^1.1.0",
     "stylelint-config-standard": "^18.1.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^7.2.1",
+    "@commitlint/config-conventional": "^7.1.2",
     "eslint": "^5.0.0",
     "eslint-config-foray1010": "^6.5.2",
-    "husky": "^0.14.3",
+    "husky": "^1.1.2",
     "ignore-sync": "^1.0.1",
     "lint-staged": "^7.0.0",
     "prettier-eslint-cli": "^4.3.2"
